# s2-geometry-library

./: .gitignore  .gitmodules  .travis.yml  Makefile.am  README.md  SConstruct  autogen.sh  configure.ac  test.py  travis.sh
base/: logging.h
debian/: README.Debian  README.source  changelog  control  copyright  python-s2.install  rules  shlibs.local
geometry/: CMakeLists.txt  Makefile.am  SConstruct  s1angle_test.cc  s2.cc  s2.pc.in  s2cellid.cc  s2cellid.pc.in  s2cellid_test.cc  s2edgeindex.cc  s2edgeindex_test.cc  s2edgeutil_test.cc  s2loop.cc  s2loop_test.cc  s2polygon.cc  s2polygon_test.cc  s2polygonbuilder.cc  s2polyline.cc  s2polyline_test.cc  s2regioncoverer.cc  s2regioncoverer_test.cc
geometry/base/: basictypes.h  commandlineflags.h  port.h
geometry/python/: CMakeLists.txt  Makefile.am  SConstruct  base.i  s2.i  s2.py  s2.swig  s2_wrap.cpp
geometry/s2/: s2.h  s2cellid.h  s2polygonbuilder.h
geometry/strings/: ascii_ctype.h  split.cc  split.h  strutil.cc  strutil.h
geometry/tests/: CMakeLists.txt  r1interval_test.cc  s1angle_test.cc  s1interval_test.cc  s2_test.cc  s2cap_test.cc  s2cell_test.cc  s2cellid_test.cc  s2cellunion_test.cc  s2edgeindex_test.cc  s2edgeutil_test.cc  s2latlng_test.cc  s2latlngrect_test.cc  s2loop_test.cc  s2pointregion_test.cc  s2polygon_test.cc  s2polygonbuilder_test.cc  s2polyline_test.cc  s2r2rect_test.cc  s2regioncoverer_test.cc  s2regionunion_test.cc  s2testing.h
geometry/util/coding/: coder.h
geometry/util/endian/: endian.h
geometry/util/hash/: hash.cc  hash.h
geometry/util/math/: mathlimits.h  mathutil.h  vector3-inl.h  vector3.h
geometry/util/math/exactfloat/: exactfloat.cc  exactfloat.h
strings/: strutil.cc
